teamapps-client/less/components/UiMediaSoupV3WebRtcClient.less
/*-
 * ========================LICENSE_START=================================
 * TeamApps
 * ---
 * Copyright (C) 2014 - 2020 TeamApps.org
 * ---
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * =========================LICENSE_END==================================
 */
.UiMediaSoupV3WebRtcClient {
  --activity-bar-color-inactive: orange;
  --activity-bar-color-active: #d40000;

  --activity-bar-color: var(--activity-bar-color-inactive);

  &.active {
    --activity-bar-color: var(--activity-bar-color-active);
  }

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  .video-container {
    position: relative;
    line-height: 0;
    transition: box-shadow 500ms;
    box-shadow: 0 10px 10px -10px var(--activity-bar-color);
    overflow: hidden;
    background-color: #eee;

    .image {
      display: inline-block;
      object-fit: contain;
    }

    .video {
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      display: inline-block;
      background-color: #eee;
      background-size: contain;
      background-position: center;
      background-repeat: no-repeat;
      transition: width 200ms, height 200ms, transform 200ms;

      &.mirrored {
        transform: rotateY(180deg);
      }
    }

    &:after { // activity bar
      position: absolute;
      display: block;
      content: ' ';
      left: 0;
      bottom: 0;
      width: 100%;
      height: 1%;
      min-height: 2px;
      max-height: 3px;
      background-color: var(--activity-bar-color);
      transition: background-color 500ms;
    }

    > .bitrate-display {
      position: absolute;
      bottom: 0;
      left: 0;
      padding: 3px;
      background-color: #00000055;
      color: #ddd;
      line-height: 1.5;

      > .bitrate-audio:before {
        content: 'audio: '
      }
      > .bitrate-video:before {
        content: 'video: '
      }
    }

    > .icons {
      position: absolute;
      bottom: 5px;
      right: 3px;
      height: 10%;
      min-height: 16px;
      max-height: 50px;
      display: flex;
      width: 100%; // firefox...
      justify-content: flex-end;
      z-index: 1;

      > .icon {
        height: 100%;
        width: auto;
      }
    }

    > .spinner-wrapper {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      display: flex;
      align-items: center;
      justify-content: center;
      background-color: rgba(255, 255, 255, .5);
    }
  }

  .caption {
    padding-top: 4px;
    text-align: center;
  }

  .profile {
    color: white;
    background-color: black;
    position: absolute;
    left: 0;
    top: 0;
  }

  &.state-idle,
  &.state-streaming {
    .spinner-wrapper {
      display: none;
    }
  }
  &.state-connecting {
    .spinner-wrapper {
      // default display
    }
  }
}

